deploy/qa/web/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: task-schedule
  name: task-schedule
  namespace: socialflow-ry
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: task-schedule
  strategy:
    rollingUpdate:
      maxSurge: 20%
      maxUnavailable: 20%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: task-schedule
    spec:
      restartPolicy: Always
      imagePullSecrets:
        - name: pulluser
      containers:
      - image: <IMAGE>:<IMAGE_TAG>
        name: task-schedule
        imagePullPolicy: IfNotPresent
        args:
        - pm2-runtime
        - start
        - /task-schedule/pm2/ecosystem.config.js
        - --only
        - Web
        lifecycle:
          preStop:
            exec:
              command:
              - /bin/sh
              - -c
              - sleep 20
        ports:
        - containerPort: 8090
        livenessProbe:
          httpGet:
            path: /deploy/live
            port: 8090
          initialDelaySeconds: 30
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /deploy/ready
            port: 8090
          initialDelaySeconds: 40
          periodSeconds: 3
        resources:
          limits:
            cpu: 1
            memory: 1Gi
          requests:
            cpu: 10m
            memory: 512Mi
